# ComfyUI-Bonsai-4B-2Bit

./: ReadMe.MD  __init__.py  bonsai_node.py  requirements.txt
backend_gpu/: README.md  diffusion_klein.py  pipeline_gpu.py  pyproject.toml  server.py
backend_gpu/prism_image_studio_backend_gpu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend_gpu/scripts/: smoke_e2e.py  smoke_remote.py
backend_gpu/tests/: test_loaders.py  test_server.py
example_workflow/: Bonsai-image-4B (2Bit).json  Bonsai-image-4B.json
